# illumio-mcp-server

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/illumio_mcp/: pce.py  server.py
src/illumio_mcp/tools/: __init__.py  containers.py  deny_rules.py  infra.py  iplists.py  labels.py  policy.py  ringfence.py  rulesets.py  services.py  traffic.py  workloads.py
tests/: conftest.py  test_mcp_tools.py
